--- a/apunte/Apunte de Sistemas Operativos (delaf).tex
+++ b/apunte/Apunte de Sistemas Operativos (delaf).tex
@@ -35,6 +35,8 @@
 \usepackage{verbatim}
 \usepackage{booktabs}
 \usepackage{fancyhdr}
+\usepackage{listings}
+\usepackage{color}
 
 % MÁRGENES
 \usepackage{anysize}
@@ -59,6 +61,25 @@
 % hasta que nivel se agregará el índice (chapter, section, subsection,
 % subsubsection y párrafos)
 \setcounter{tocdepth}{2}
+
+% OPCIONES PARA CÓDIGO FUENTE
+% http://en.wikibooks.org/wiki/LaTeX/Source_Code_Listings
+\definecolor{green}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+\lstset{
+	xleftmargin=\parindent,
+	language=C,
+	commentstyle=\color{gray},
+	keywordstyle=\color{blue},
+	numbers=left,
+	numbersep=10pt,
+	numberstyle=\color{gray},
+	stringstyle=\color{red},
+	tabsize=2,
+	showspaces=false,
+	showstringspaces=false,
+}
 
 % INICIO DEL DOCUMENTO
 \begin{document}
@@ -95,6 +116,9 @@
 
 % CAPÍTULO 3: ESTRUCTURA Y DISEÑO
 \include{capitulos/C03_estructura}
+
+% CAPÍTULO 4: PROCESOS
+\include{capitulos/C04_procesos}
 
 % ANEXOS
 \renewcommand{\appendixname}{Anexo}
