--- a/apunte/Apunte de Sistemas Operativos (delaf).tex
+++ b/apunte/Apunte de Sistemas Operativos (delaf).tex
@@ -120,6 +120,9 @@
 % CAPÍTULO 4: PROCESOS
 \include{capitulos/C04_procesos}
 
+% CAPÍTULO 5: SINCRONIZACIÓN
+\include{capitulos/C05_sincronizacion}
+
 % ANEXOS
 \renewcommand{\appendixname}{Anexo}
 \appendix
