Se sube apunte de sistemas operativos (borrador)

--- a/apunte/Apunte de Sistemas Operativos (delaf).tex
+++ b/apunte/Apunte de Sistemas Operativos (delaf).tex
@@ -123,6 +123,18 @@
 % CAPÍTULO 5: SINCRONIZACIÓN
 \include{capitulos/C05_sincronizacion}
 
+% CAPÍTULO 6: CPU
+\include{capitulos/C06_cpu}
+
+% CAPÍTULO 7: MEMORIA 
+\include{capitulos/C07_memoria}
+
+% CAPÍTULO 8: DISCO
+\include{capitulos/C08_disco}
+
+% CAPÍTULO 9 PROTECCIÓN: 
+\include{capitulos/C09_proteccion}
+
 % ANEXOS
 \renewcommand{\appendixname}{Anexo}
 \appendix
