--- a/apunte/otros/agradecimientos.tex
+++ b/apunte/otros/agradecimientos.tex
@@ -10,7 +10,7 @@
 % Free Documentation License".
 %
 % Link: http://www.gnu.org/copyleft/fdl.html
-% 
+%
 
 % AGRADECIMIENTOS
 \chapter*{Agradecimientos}
@@ -28,9 +28,9 @@ Al profesor Guillermo Badillo, quién confió en mi por primera vez para dictar 
 curso de Sistemas Operativos en la Universidad Andrés Bello.
 
 Al profesor Luis Mateu, quién me aceptó como oyente\footnote{Fui oyente en otoño
-2012, su alumno en otoño 2013 y su auxiliar en primavera 2013.} en sus clases de
-Sistemas Operativos en la Universidad de Chile y en cuyas clases se basó gran
-parte de este documento.
+2012, su alumno en otoño 2013, su auxiliar en primavera 2013 y otoño 2014.} en
+sus clases de Sistemas Operativos en la Universidad de Chile y en cuyas clases
+se basó gran parte de este documento.
 
 Además quisiera agradecer a todos aquellos que han permitido que este proyecto
 salga adelante, ya sea con sus aportes, su ánimo o su paciencia (sobre todo
